--- a/style.css
+++ b/style.css
@@ -4,12 +4,147 @@
     margin: 0;
 }
 
-.headertop{
-    display: flex;
+.Header {
+    color: white;
+    background-color: #1F2937;
+}
 
+.Headertop{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 100px;
+    margin-right: 100px;
+    padding: 10px;
 }
 
 ul {
     display: flex;
     list-style: none;
+    gap: 20px;
+}
+
+.header-logo {
+    color:#f9faf8;
+    font-size: 24px;
+}
+
+
+a {
+text-decoration: none;
+color: white;
+}
+
+
+.title {
+    font-size: 48px;
+    font-weight: extra-bold;
+    color: #f9faf8;
+}
+
+.titlesub {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.Header-body {
+    display: flex;
+    margin-left: 100px;
+    margin-right: 100px;
+
+}
+
+.hbright {
+    max-width: 250px
+}
+
+img {
+  max-height: 200px;
+  margin-left: 44px;
+}
+
+button {
+    background-color: #3882f6 ;
+    color: white;
+    padding: 5px 20px;
+    border-radius: 8px;
+    border: none;
+}
+
+
+.h2 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    margin: 50px;
+}
+
+.boxes {
+    color: #1F2937;
+    font-size: 10px;
+    display: flex;
+    gap: 40px;
+    justify-content: center;
+}
+
+.square {
+    width: 100px;
+    height: 100px;
+    border: 4px solid blue;
+    border-radius: 10px;
+    color:white
+}
+
+.section2 {
+    margin: 50px;
+    text-align: center;
+}
+
+.section3 {
+    background-color: #E5E7EB;
+    padding: 200px;
+    display: flex;
+    flex-direction: column;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.quote-author {
+    color: #1F2937;
+    font-weight: bold;
+    align-self: flex-end;
+}
+
+.section4 {
+    padding: 88px 88px;
+    }
+
+.call-action {
+    background-color: #3882f6;
+    border-radius: 4px;
+    color: #f9faf8;
+    display: flex;
+    padding: 33px 77px;
+    justify-content: space-around;
+
+}
+
+.call-action-button {
+    background-color: #3882f6;
+    color: white;
+    padding: 5px 20px;
+    border-radius: 8px;
+    border: 2px solid white
+}
+
+.footer {
+    background-color: #1F2937;
+    color:#f9faf8;
+    align-items: flex-end;
+    padding: 20px;
+    font-size: 12px;
+    text-align: center;
 }
